--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,36 @@
-// @import '_component/config/color';
-// @import '_component/config/typography';
-// @import '_component/layout/layout';
-// @import '_component/header/header';
-// @import '_component/footer/footer';
+body {
+  font-family: 'Chakra Petch';
+  list-style-type: none;
+}
+
+main {
+  max-width: 900px;
+  margin: auto;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Chakra Petch';
+}
+
+h2 {
+  font-family: 'Chakra Petch';
+}
+
+.hero {
+  background-color: #0fdc2154;
+  margin-bottom: 100px;
+}
+
+.hero .image {
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  background-image: url(asset/image/dorind-profile-pic.jpg);
+  background-size: cover;
+  background-position: center;
+  margin: auto;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  position: relative;
+  top: 100px;
+}
