--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,10 @@
 doctype html
 html
+- var baseUrl = 'https://jestva.github.io/workshop-project-001/'
   head
     title Dorin Dumitrascuta - Web Developer
     link(href="https://fonts.googleapis.com/css?family=Chakra+Petch" rel="stylesheet")
-    link(href="style.css" rel="stylesheet" type="text/css")
+    link(href='${baseUrl}/style.css' rel="stylesheet" type="text/css")
   body
     main
       h1 Dorin Dumitrascuta - Front End Designer
