--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,7 @@ html
   head
     title Dorin Dumitrascuta - Web Developer
     link(href="https://fonts.googleapis.com/css?family=Chakra+Petch" rel="stylesheet")
-    link(href='${baseUrl}/style.css' rel="stylesheet" type="text/css")
+    link(href=`${baseUrl}/style.css` rel="stylesheet" type="text/css")
   body
     main
       h1 Dorin Dumitrascuta - Front End Designer
